--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
             terraform plan -out tfapply -var-file variables.tfvars
           working_directory: terraform/src
       - persist_to_workspace:
-          root: .
+          root: ./terraform/src
           paths:
             - .
 
